[gd_scene load_steps=16 format=3 uid="uid://dqfebhfam47ig"]

[ext_resource type="Script" path="res://scripts/shooting.gd" id="1_aymb1"]
[ext_resource type="Shader" path="res://assets/dissolve.gdshader" id="2_281rh"]
[ext_resource type="Texture2D" uid="uid://bqydnl5eph3vl" path="res://assets/Weapons/weaponR3.png" id="2_uwvo0"]
[ext_resource type="Texture2D" uid="uid://m6nt72ko88dc" path="res://assets/Extras/muzzle.png" id="3_j7mtr"]
[ext_resource type="AudioStream" uid="uid://b8q8djqsmbjht" path="res://assets/sounds/shotgun1.wav" id="5_cruq7"]
[ext_resource type="AudioStream" uid="uid://b33bjub627cht" path="res://assets/sounds/teleport-14639.mp3" id="6_3ntgw"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ot1an"]
frequency = 0.0081

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0smuq"]
noise = SubResource("FastNoiseLite_ot1an")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vi7do"]
shader = ExtResource("2_281rh")
shader_parameter/value = 0.0
shader_parameter/center_offset = null
shader_parameter/custom_time = null
shader_parameter/noise = SubResource("NoiseTexture2D_0smuq")

[sub_resource type="AtlasTexture" id="AtlasTexture_cay8w"]
atlas = ExtResource("2_uwvo0")
region = Rect2(400, 1256, 1400, 600)

[sub_resource type="SpriteFrames" id="SpriteFrames_jiq2e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cay8w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_88n24"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_c8utl"]
resource_name = "shrink"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_fuuy8"]
resource_name = "unshrink"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.847, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vway0"]
_data = {
"RESET": SubResource("Animation_88n24"),
"shrink": SubResource("Animation_c8utl"),
"unshrink": SubResource("Animation_fuuy8")
}

[node name="Shotgun" type="Node2D"]
script = ExtResource("1_aymb1")

[node name="sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_vi7do")
position = Vector2(0.499993, 0.437502)
scale = Vector2(0.0435714, 0.0552083)
sprite_frames = SubResource("SpriteFrames_jiq2e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vway0")
}

[node name="muzzle" type="Marker2D" parent="."]
position = Vector2(26, -4)

[node name="shootEffect" type="Sprite2D" parent="."]
position = Vector2(38, -5)
scale = Vector2(0.013855, 0.0126953)
texture = ExtResource("3_j7mtr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="sfx_shotgun" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_cruq7")
volume_db = 2.0

[node name="sfx_teleport" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_3ntgw")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
